fix shadow and iframe spacing

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -24,11 +24,6 @@ $secondary-color: #dcdacc;
     color: white;
     font-weight: bolder;
     font-size: large;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
 }
 
 .card-container {
